fixed visibility problem on inactive bubbles

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -351,6 +351,7 @@ a {
 	height: 25px;
 	width: 40px;
 	text-align:center;
+	visibility:hidden;
 }
 
 #book .comment-accessor .commented {
